--- a/Dwolla.Client/Dwolla.Client.csproj
+++ b/Dwolla.Client/Dwolla.Client.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     <Company>Dwolla, Inc.</Company>
     <!-- Also update UserAgent version in DwollaClient.cs -->
     <AssemblyVersion>5.1.1</AssemblyVersion>
