--- a/Dwolla.Client/Dwolla.Client.csproj
+++ b/Dwolla.Client/Dwolla.Client.csproj
@@ -15,6 +15,7 @@
     <PackageTags>dwolla api payments bank transfers money ach sdk</PackageTags>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.6" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.6" />
